[package]
name = "rc_slab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
bumpalo = {version = "3.14", features = ["allocator_api"] }

